<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Loja Virtual Cliente</string>
    <string name="nome_loja"><b><font color="#3F51B5">Loja</font></b> Virtual</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="frase_cadastro">Ainda não tem uma conta? Cadastre-se agora!</string>
    <string name="frase_cadastro2">Faça seu cadastro</string>
    <string name="erro_campo">Preencha todos os campos!</string>
    <string name="erro_email">E-mail inválido!</string>
    <string name="erro_senha">Senha inválida! (Mínimo 6 caracteres)</string>
    <string name="erro_conta_duplicada">Essa conta já está cadastrada!</string>
    <string name="erro_cadastro">Erro ao cadastrar usuário!</string>
    <string name="erro_internet">Sem conexão com a internet!</string>
    <string name="erro_usuario">Usuário não encontrado!</string>
    <string name="erro_login">Erro ao efetuar login!</string>
    <string name="sucesso_cadastro">Usuário cadastrado com sucesso!</string>
    <string name="sucesso_login">Login efetuado com sucesso!</string>
    <string name="texto_dialog_carregando">Carregando....</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_sair">Sair</string>
    <string name="frase_imagem_usuario">imagem do usuario</string>
    <string name="frase_imagem_nome">imagem do nome</string>
    <string name="frase_imagem_email">imagem do email</string>
    <string name="nome_produto">Sapato de Couro</string>
    <string name="preco_produto">R$ 500,00</string>
    <string name="frase_escolha_tamanho">Escolha o tamanho</string>
    <string name="numero_38">38</string>
    <string name="numero_39">39</string>
    <string name="numero_40">40</string>
    <string name="numero_41">41</string>
    <string name="numero_42">42</string>
    <string name="palavra_preco">Preço</string>
    <string name="btn_finalizar">Finalizar Pedido</string>
    <string name="frase_pagamento">Preencha dodos os camops antes de fazer o pagamento</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hnt_rua_numero">Rua e Número</string>
    <string name="hint_cidade_estado">Cidade e Estado</string>
    <string name="hint_celular">Celular</string>
    <string name="btn_pagamento">Fazer Pagamento</string>
</resources>