<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.detalhesproduto.DetalhesProduto">

    <ImageView
        android:id="@+id/ivProduto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/black"
        android:contentDescription="@string/nome_produto"
        android:scaleType="centerCrop"/>
    
    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_produto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frase_escolha_tamanho"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        tools:ignore="UselessLeaf">

        <RadioButton
            android:id="@+id/rbNumero38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_38"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color_selector"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginHorizontal="5dp"/>

        <RadioButton
            android:id="@+id/rbNumero39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_39"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color_selector"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginHorizontal="5dp"/>

        <RadioButton
            android:id="@+id/rbNumero40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_40"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color_selector"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginHorizontal="5dp"/>

        <RadioButton
            android:id="@+id/rbNumero41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_41"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color_selector"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginHorizontal="5dp"/>

        <RadioButton
            android:id="@+id/rbNumero42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_42"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color_selector"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginHorizontal="5dp"/>
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/palavra_preco"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/tvPrecoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_produto"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/bFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_finalizar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:padding="15dp"/>
</LinearLayout>