<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activitys.telafinalizarpedidos.TelaFinalizarPedidos">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frase_pagamento"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/etBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/hint_bairro"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etRuaNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/hnt_rua_numero"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/etCidadeEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/hint_cidade_estado"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/etCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="phone"
            android:maxLength="11"
            android:hint="@string/hint_celular"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/bPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pagamento"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:padding="15dp"
            android:layout_margin="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>