<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.formcadastro.FormCadastro">

        <TextView
            android:id="@+id/tvCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:text="@string/frase_cadastro2"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/vContener"
            android:layout_height="400dp"
            style="@style/Theme.ConteinerForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCadastro"/>

        <EditText
            android:id="@+id/etNome"
            style="@style/Theme.CampoForm"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:inputType="textCapWords"
            android:hint="@string/hint_nome"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toTopOf="@+id/vContener"/>

        <EditText
            android:id="@+id/etEmail"
            style="@style/Theme.CampoForm"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toBottomOf="@+id/etNome"/>

        <EditText
            android:id="@+id/etSenha"
            style="@style/Theme.CampoForm"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:inputType="numberPassword"
            android:hint="@string/hint_senha"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toBottomOf="@id/etEmail"/>

        <Button
            android:id="@+id/bCadastrar"
            style="@style/Theme.ButtonForm"
            android:text="@string/btn_cadastrar"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toBottomOf="@id/etSenha"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>