<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.formlogin.FormLogin">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/nome_loja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"/>

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nome_loja"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <View
            android:id="@+id/vContener"
            android:layout_height="300dp"
            style="@style/Theme.ConteinerForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNome"/>

        <EditText
            android:id="@+id/etEmail"
            style="@style/Theme.CampoForm"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toTopOf="@+id/vContener"/>

        <EditText
            android:id="@+id/etSenha"
            style="@style/Theme.CampoForm"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:inputType="numberPassword"
            android:hint="@string/hint_senha"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toBottomOf="@id/etEmail"/>

        <Button
            android:id="@+id/bEntrar"
            style="@style/Theme.ButtonForm"
            android:text="@string/btn_entrar"
            app:layout_constraintEnd_toEndOf="@id/vContener"
            app:layout_constraintStart_toStartOf="@id/vContener"
            app:layout_constraintTop_toBottomOf="@id/etSenha"/>

        <TextView
            android:id="@+id/tvCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frase_cadastro"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/vContener"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>